Make sure links in help text are not super-visible
FossilOrigin-Name: 53dd19122302b8703c8cb9b2b8f2a5396a28b4ea37fdb60f4093c95c66a2c5c6

--- a/src/www/admin/static/styles/02-common.css
+++ b/src/www/admin/static/styles/02-common.css
@@ -107,6 +107,11 @@ span.alert, b.alert {
     color: var(--gBorderColor);
 }
 
+.help a {
+    color: var(--gBorderColor);
+}
+
+
 p.help:not(.block) {
     margin: 1em;
 }
